added tests to product and client